# json-deserializer

./: .gitignore  Cargo.toml  README.md  write_bench_files.py
.github/workflows/: coverage.yml  test.yml
benches/: parse.rs  serde_mapping.rs
src/: array.rs  boolean.rs  error.rs  lexer.rs  lib.rs  null.rs  number.rs  object.rs  parser.rs  string.rs
tests/it/: json_integration.rs  main.rs
