[package]
name = "json-deserializer"
version = "0.1.0"
license = "Apache-2.0"
description = "Performant library to deserialize JSON"
homepage = "https://github.com/jorgecarleitao/json-parser"
repository = "https://github.com/jorgecarleitao/json-parser"
authors = ["Jorge C. Leitao <jorgecarleitao@gmail.com>"]
keywords = [ "json" ]
edition = "2021"

[dev-dependencies]
proptest = "1"
serde = {version="1", features = ["derive"]}
serde_json = "1"

criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "parse"
harness = false
