[package]
name = "json-deserializer"
version = "0.3.1"
license = "Apache-2.0"
description = "Performant library to deserialize JSON"
homepage = "https://github.com/jorgecarleitao/json-deserializer"
repository = "https://github.com/jorgecarleitao/json-deserializer"
authors = ["Jorge C. Leitao <jorgecarleitao@gmail.com>"]
keywords = [ "json" ]
edition = "2021"

[dev-dependencies]
proptest = "1"
serde = {version="1", features = ["derive"], default-features = false}
serde_json = "1"
simd-json = {version = "0.4", features = ["allow-non-simd"]}

criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "parse"
harness = false
